--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,3 +1,6 @@
 <p>test works!</p>
 <button mat-flat-button color="primary">Basic</button>
 <button class="btn btn-primary">button</button>
+<br>
+<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
+<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="account_box"></mat-icon>
